fix detail page: list wrap width , with scroll ok!

--- a/WraDashboard/css/style.css
+++ b/WraDashboard/css/style.css
@@ -1159,6 +1159,7 @@ a {
 .dashboard-detail .list {
     grid-area: list;
     background-color: #F7FAFC !important;
+    overflow: hidden;
 }
 
 .dashboard-detail *:not(.grid-title) {
